--- a/src/manifest/manifest.firefox.json
+++ b/src/manifest/manifest.firefox.json
@@ -1,20 +1,16 @@
 {
   "manifest_version": 3,
-  "name": "MocoApp Custom JS Injector",
+  "name": "Moco Ticket Checker",
   "version": "1.0",
-  "description": "Führt benutzerdefiniertes JS auf mocoapp.com Tabs aus.",
+  "description": "Checks if ticket number matched with Moco project",
   "permissions": [
-    "scripting",
-    "tabs",
-    "activeTab",
-    "webNavigation",
     "storage"
   ],
   "icons": {
-    "16": "/images/get_started16.png",
-    "32": "/images/get_started32.png",
-    "48": "/images/get_started48.png",
-    "128": "/images/get_started128.png"
+    "16": "/images/logo16.jpg",
+    "32": "/images/logo32.jpg",
+    "48": "/images/logo48.jpg",
+    "128": "/images/logo128.jpg"
   },
   "host_permissions": [
     "*://*.mocoapp.com/*"
@@ -22,9 +18,10 @@
   "content_scripts": [
     {
       "matches": [
-        "*://*.mocoapp.com/*"
+        "*://*.mocoapp.com/activities*"
       ],
       "js": [
+        "browser-polyfill.js",
         "content.js"
       ],
       "css": [
@@ -33,7 +30,13 @@
     }
   ],
   "action": {
-    "default_title": "MocoApp JS Injector",
-    "default_popup": "popup.html"
+    "default_title": "Moco Ticket Checker",
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "/images/logo16.jpg",
+      "32": "/images/logo32.jpg",
+      "48": "/images/logo48.jpg",
+      "128": "/images/logo128.jpg"
+    }
   }
 }
