--- a/src/manifest/manifest.firefox.json
+++ b/src/manifest/manifest.firefox.json
@@ -38,5 +38,15 @@
       "48": "/images/logo48.jpg",
       "128": "/images/logo128.jpg"
     }
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{134a11ac-afc5-4238-a30e-7213a7d29b68}",
+      "data_collection_permissions": {
+        "required": [
+          "none"
+        ]
+      }
+    }
   }
 }
