--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moco-ticket-checker",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
     "package:chrome": "cd dist/chrome && zip -r ../chrome.zip .",
     "source-zip": "zip -r dist/source.zip . -x 'node_modules/*' -x 'dist/*' -x 'dist/source.zip'",
     "type-check": "tsc --noEmit",
-    "publish": "npm run build && npm run package:firefox && npm run package:chrome && npm run source-zip"
+    "prepare-publish": "npm run build && npm run package:firefox && npm run package:chrome && npm run source-zip"
   },
   "keywords": [],
   "author": "Markus Lohmeier",
